Setup Teleport and StartPoint across 2 scenes

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,8 +36,11 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets/Scripts/StartPoint.cs" />
      <Compile Include="Assets/Scripts/PlayerMove.cs" />
+     <Compile Include="Assets/Scripts/Scenes.cs" />
      <Compile Include="Assets/Scripts/FollowTarget.cs" />
+     <Compile Include="Assets/Scripts/TeleportPlayer.cs" />
     <Reference Include="UnityEngine">
         <HintPath>/home/samuelslade/Unity/Hub/Editor/2021.3.15f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
