--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,6 +52,8 @@
      <Compile Include="Assets/Scripts/SaveGame.cs" />
      <Compile Include="Assets/Scripts/SaveDataWriter.cs" />
      <Compile Include="Assets/Scripts/SaveDataHandler.cs" />
+     <Compile Include="Assets/Scripts/SaveDataReader.cs" />
+     <Compile Include="Assets/Scripts/LoadGame.cs" />
     <Reference Include="UnityEngine">
         <HintPath>/home/samuelslade/Unity/Hub/Editor/2021.3.15f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
@@ -317,7 +319,7 @@
         <HintPath>/home/samuelslade/source/misc/unity-save-system/Library/PackageCache/com.unity.visualscripting@1.7.8/Runtime/VisualScripting.Flow/Dependencies/NCalc/Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-        <HintPath>/home/samuelslade/source/misc/unity-save-system/Library/PackageCache/com.unity.nuget.newtonsoft-json@3.0.2/Runtime/Newtonsoft.Json.dll</HintPath>
+        <HintPath>/home/samuelslade/source/misc/unity-save-system/Library/PackageCache/com.unity.nuget.newtonsoft-json@3.2.1/Runtime/Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="netstandard">
         <HintPath>/home/samuelslade/Unity/Hub/Editor/2021.3.15f1/Editor/Data/NetStandard/ref/2.1.0/netstandard.dll</HintPath>
@@ -816,6 +818,9 @@
     </Reference>
     <Reference Include="Unity.VisualScripting.State">
         <HintPath>/home/samuelslade/source/misc/unity-save-system/Library/ScriptAssemblies/Unity.VisualScripting.State.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json.UnityConverters">
+        <HintPath>/home/samuelslade/source/misc/unity-save-system/Library/ScriptAssemblies/Newtonsoft.Json.UnityConverters.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
